# chatbot-volt-clickmassa

./: .dockerignore  .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile.backup  README.md  flake.nix  nixpacks.toml  railway.json
src/: config.rs  error.rs  main.rs
src/auth/: token_manager.rs
src/cache/: mod.rs  token_cache.rs
src/clients/: highconsult_client.rs  mod.rs  v8_client.rs  viacep_client.rs
src/docs/: mod.rs
src/models/: chatbot.rs  external.rs  mod.rs  v8.rs
src/routes/: api_v1.rs  cpf.rs  health.rs  mod.rs  pix.rs  proposta.rs  simulacao.rs  termo.rs
src/services/: cache_service.rs  enrichment_service.rs  mod.rs  proposta_service.rs  simulacao_service.rs  termo_service.rs
src/utils/: cpf_validator.rs  mod.rs  pix_validator.rs
