[package]
name = "chatbot-volt-clickmassa"
version = "0.1.0"
edition = "2021"
description = "Middleware para integração entre Chatbot ClickMassa e API V8 Sistema"

[dependencies]
# Web framework
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12.24", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuração
dotenvy = "0.15"

# Cache
moka = { version = "0.12", features = ["future"] }

# Tempo
chrono = { version = "0.4", features = ["serde"] }

# Validação
validator = { version = "0.20.0", features = ["derive"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Documentação OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.0"


