[package]
name = "chatbot-volt-clickmassa"
version = "0.1.0"
edition = "2021"
description = "Middleware para integração entre Chatbot ClickMassa e API V8 Sistema"

[[bin]]
name = "chatbot-volt-clickmassa"
path = "src/main.rs"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
moka = { version = "0.12", features = ["future"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
thiserror = "2.0.17"
anyhow = "1.0"
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"


